--- a/manifest_ff.json
+++ b/manifest_ff.json
@@ -1,8 +1,8 @@
 {
-	"name": "Beyond 20",
+	"name": "Beyond 20 - BeyondLED",
 	"version": "2.7.0",
 	"manifest_version": 2,
-	"description": "Integrates the D&D Beyond Character Sheets with Roll20 and Foundry VTT.",
+	"description": "Integrates LED strips with D&D Beyond Character Sheets for Roll20 and Foundry VTT encounters.",
 	"permissions": [
 		"activeTab",
 		"tabs",
