--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Beyond 20",
 	"version": "2.8.0",
 	"manifest_version": 2,
-	"description": "Integrates LED strips with D&D Beyond Character Sheets for Roll20 and Foundry VTT encounters.",
+	"description": "Beyond LED Version - Integrates LED strips with D&D Beyond Character Sheets for Roll20 and Foundry VTT encounters.",
 	"permissions": [
 		"activeTab",
 		"tabs",
